removed dead code for / route; made the error messages more descriptive; atomicized the analytics getting transaction; refactored topic wise analysis fetching; tightened the POST endpoint inputs; expanded the API documentations
